# checkmate

./: CMakeLists.txt  README.md
engines/pikafish/linux/: pikafish-bmi2
engines/pikafish/macos/: pikafish
src/: boardposition.cpp  boardposition.h  engine.cpp  engine.h  mainwindow.cpp  mainwindow.h  ucicommon.h
